Fixed caption's text issue. https://trello.com/c/bddjEUNI/421-homepage-alignment

--- a/docroot/sites/all/themes/ambitious/sass/layouts/caption-text.scss
+++ b/docroot/sites/all/themes/ambitious/sass/layouts/caption-text.scss
@@ -86,6 +86,7 @@
 		// Title 01
 		.caption-text-title-1{
 			margin-top: 10px;
+			margin-right: 20px;
 			@include breakpoint($mobile){
 				// 768px -
 				margin-left: 90px;
@@ -112,8 +113,9 @@
 			
 			@include breakpoint($not-all-mobile){
 				// 768px +
-				margin-left: 150px;
+				margin-left: 186px;
 				margin-right: -50px;
+				padding-left: 30px;
 
 			}
 			@include breakpoint($mobile){
